avoiding overlapping widths in article tags

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,11 +9,13 @@
 	scrollbar-width: none; /* Firefox */
 }
 
+html,
 body {
 	background: black;
 	color: white;
 	margin: 0 auto;
 	font-family: 'Helvetica';
+	width: 100%;
 }
 
 .app-container {
@@ -37,7 +39,7 @@ main {
 			z-index: 100;
 		}
 
-		height: 100vh;
-		width: 100vw;
+		// height: 100vh;
+		// width: 100%;
 	}
 }
