--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -36,7 +36,7 @@ html:not([data-scroll='0']) .sidebar-links {
 
 	text-align: center;
 	background: $header-base-color;
-	z-index: 500;
+	z-index: 400;
 	top: 0;
 
 	min-height: 5vh;
